# Fchannelbot

./: .dockerignore  alembic.ini  backend.dockerfile  config.py  db.dockerfile  db.sh  docker-compose.yml  main.py  pyproject.toml
backend/: .env  .env_back  backend.dockerfile  config.py  main.py
backend/core/admin/: commands.py
backend/core/alembic/: env.py
backend/core/alembic/versions/: cda8f4d73f9a_.py
backend/core/database/: FurysChannelDb.sqlite3  basedao.py  db.py  models.py  requests.py
backend/core/handlers/: channel_handler.py  first_start_handler.py
backend/core/middlewares/: throttlingMiddleware.py
core/admin/: commands.py
core/alembic/: env.py
core/alembic/versions/: 317f96d23c38_.py  96e4d92a1341_.py
core/database/: __init__.py  basedao.py  db.py  models.py  requests.py
core/filters/: isadmin.py
core/handlers/: __init__.py  callback.py  channel_handler.py  first_start_handler.py
core/keyboards/: user_keyboards.py
core/middlewares/: apschedulerMiddleware.py
core/utils/: admin_notifications.py  commands.py
redis_data/: dump.rdb
